--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="styles.css" rel="stylesheet">
+        <script src="htmx.min.js"></script>
     </head>
     <body>
         <h1 class="text-3xl font-bold underline">
