--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,6 @@
         <h1 class="text-3xl font-bold underline">
             Hello, {{ name }}!
         </h1>
+        <button hx-post="/click" hx-swap="outerHTML">Click Me!</button>
     </body>
 </html>
