--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,8 @@
             Hello, {{ name }}!
         </h1>
         <button hx-post="/click" hx-swap="outerHTML">Click Me!</button>
+
+        {% include "./components/shared/input.html" %}
+
     </body>
 </html>
