add hexagonal architecture and small styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="styles.css" rel="stylesheet">
-        <script src="htmx.min.js"></script>
-    </head>
-    <body>
-        <h1 class="text-3xl font-bold underline">
-            Hello, {{ name }}!
-        </h1>
-        <button hx-post="/click" hx-swap="outerHTML">Click Me!</button>
-
-        {% include "./components/shared/input.html" %}
-
-    </body>
+  <head>
+    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="styles.css" rel="stylesheet" />
+    <script src="htmx.min.js"></script>
+    <style>
+      html,
+      body {
+        background-color: rgb(23 37 84);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="flex justify-center py-8">
+      {% include "./components/minify_form.html" %}
+    </div>
+  </body>
 </html>
